# jira.rs

./: Cargo.toml  README.md
docs/: BulkIssuePropertyUpdateRequest.md  BulkIssuePropertyUpdateRequestFilter.md  ChangelogHistoryMetadata.md  Comment.md  CommentVisibility.md  ComponentWithIssueCount.md  ComponentWithIssueCountAssignee.md  ComponentWithIssueCountLead.md  ComponentWithIssueCountRealAssignee.md  Context.md  ContextScope.md  CreateWorkflowTransitionDetails.md  CreateWorkflowTransitionDetailsRules.md  CreateWorkflowTransitionDetailsScreen.md  CreateWorkflowTransitionRulesDetails.md  CreateWorkflowTransitionRulesDetailsConditions.md  DashboardGadgetSettings.md  DashboardGadgetSettingsPosition.md  DashboardGadgetUpdateRequest.md  DashboardGadgetUpdateRequestPosition.md  DashboardOwner.md  DashboardsApi.md  EventNotification.md  EventNotificationField.md  EventNotificationGroup.md  EventNotificationProjectRole.md  EventNotificationUser.md  FieldDetails.md  FieldDetailsSchema.md  FieldDetailsScope.md  FunctionReferenceData.md  HistoryMetadata.md  HistoryMetadataActor.md  HistoryMetadataCause.md  HistoryMetadataGenerator.md  InstanceInformationApi.md  IssueFieldOptionConfiguration.md  IssueFieldOptionConfigurationScope.md  IssueFieldOptionScopeBean.md  IssueFieldOptionScopeBeanGlobal.md  (+105 more)
old/: lib.rs
src/apis/: announcement_banner_api.rs  app_migration_api.rs  app_properties_api.rs  application_roles_api.rs  audit_records_api.rs  avatars_api.rs  configuration.rs  dashboards_api.rs  dynamic_modules_api.rs  filter_sharing_api.rs  filters_api.rs  groups_api.rs  (+77 more)
(+578 files in other folders)
